# ovax

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
ovagrpc/: ovagrpc.proto
ovax-docs/: .gitignore  config.json  nav.md  readme
ovax-docs/docs/: build.md  cli.md  overview.md
src/: cli.rs  filehash.rs  main.rs  utils.rs
src/checksum/: mod.rs  mutisha256.rs  sha256.rs  types.rs
src/cli/: cli.rs  handler.rs  hash.rs  init.rs  keyframes.rs  mod.rs  preview.rs  scan.rs  sprite.rs  thumb.rs  worker.rs
src/preview/: mod.rs  webm.rs
src/scan/: detail.rs  mod.rs  types.rs  videos.rs
src/sprite/: keyextract.rs  keyscan.rs  manifest.rs  mod.rs  stitch.rs  types.rs  utils.rs
src/thumb/: frame.rs  mod.rs  multithumb.rs  savejpg.rs  types.rs
