[package]
name = "ovax"
version = "0.1.0"
edition = "2024"

[dependencies]
ffmpeg-next = "8.0.0"
image = "0.25.9"
walkdir = "2.5.0"
rayon = "1.8" 
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
mp4 = "0.14.0"
clap = { version = "4.5.53", features = ["derive"] }
sha2 = "0.10.9"
encoding_rs = "0.8.29"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tonic-build = "0.12"